--- a/Clowns' F8/Clowns' F8.vcxproj.filters
+++ b/Clowns' F8/Clowns' F8.vcxproj.filters
@@ -222,6 +222,9 @@
     <ClInclude Include="..\Clowns%27 F8\Battle4.h">
       <Filter>Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="Intro.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Clowns%27 F8\Application.cpp">
@@ -390,6 +393,9 @@
       <Filter>Particle</Filter>
     </ClCompile>
     <ClCompile Include="..\Clowns%27 F8\Battle4.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="Intro.cpp">
       <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
