--- a/Clowns' F8/Clowns' F8.vcxproj
+++ b/Clowns' F8/Clowns' F8.vcxproj
@@ -22,7 +22,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{22D3C7EC-C963-4AD1-8C4A-8FCD551EE143}</ProjectGuid>
     <RootNamespace>ClownsF8</RootNamespace>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
     <ProjectName>Clowns' F8</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -158,6 +158,7 @@
     <ClInclude Include="..\Clowns%27 F8\Particle.h" />
     <ClInclude Include="..\Clowns%27 F8\ParticlePool.h" />
     <ClInclude Include="..\Clowns%27 F8\Polarbear.h" />
+    <ClInclude Include="Intro.h" />
     <ClInclude Include="Polarpath.h" />
     <ClInclude Include="..\Clowns%27 F8\Squares.h" />
     <ClInclude Include="..\Clowns%27 F8\Transition.h" />
@@ -221,6 +222,7 @@
     <ClCompile Include="..\Clowns%27 F8\Particle.cpp" />
     <ClCompile Include="..\Clowns%27 F8\ParticlePool.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Polarbear.cpp" />
+    <ClCompile Include="Intro.cpp" />
     <ClCompile Include="Polarpath.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Squares.cpp" />
     <ClCompile Include="..\Clowns%27 F8\Transition.cpp" />
